Fix double vertical scrollbar issue
Set html to handle scrolling and body to overflow:visible

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,13 @@
 
 * { margin:0 0; padding:0 0; box-sizing:border-box; }
 
-html, body {
+html {
+  overflow-y: scroll;
   overflow-x: hidden;
+}
+
+body {
+  overflow: visible;
   width: 100%;
   margin: 0;
   padding: 0;
